# Boussinesq

./: ellipsoid.vtk  force_hertz.txt  force_sphere.txt  pairs.vtk  pairs_rs.vtk  penetration.txt  phi_distance_object_contact.txt  plane_patch.vtk  plane_patch_rs.vtk  sphere.vtk  sphere_patch.vtk  sphere_patch_rs.vtk
geometry/mesh_query/: BUILD.bazel  mesh.cc  mesh.h  mesh_query.cc  mesh_query.h  vtk_io.h
geometry/mesh_query/examples/: BUILD.bazel  output_mesh_query.cc  read_obj_write_vtk.cc  sphere_vs_ellipsoid.cc  sphere_vs_sphere.cc
geometry/mesh_query/test/: mesh_query_test.cc
geometry/query_results/: BUILD.bazel  penetration_as_triangle_pair.h
multibody/boussinesq_solver/: BUILD.bazel  README.md  compliance_matrix.cc  compliance_matrix.h  element_compliance_matrix.cc  element_compliance_matrix.h  integral_general_triangle.cc  integral_general_triangle.h  integral_reference_triangle.cc  integral_reference_triangle.h  jacobian_H_matrix.cc  jacobian_H_matrix.h  math_helper.cc  math_helper.h  objects_contact_model.cc  objects_contact_model.h  row_compliance_matrix.cc  row_compliance_matrix.h  test_helper.cc  test_helper.h  triangle_area.cc  triangle_area.h  triangle_orientation.cc  triangle_orientation.h
multibody/boussinesq_solver/test/: compliance_matrix_test.cc  element_compliance_matrix_test.cc  example_test.cc  integral_general_triangle_test.cc  integral_reference_triangle_test.cc  jacobian_H_matrix_test.cc  math_helper_test.cc  row_compliance_matrix_test.cc  sphere_compliance_test.cc  test_helper_test.cc  triangle_area_test.cc  triangle_orientation_test.cc
multibody/boussinesq_solver/test/mesh_data/: draft.txt  pressure.txt  pressure_on_a_square.vtk  sphere.vtk  sphere_log.vtk
