# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_library(
    name = "mesh",
    srcs = ["mesh.cc"],
    hdrs = ["mesh.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//common:essential",
        "//common:find_resource",
        "//geometry/query_results:penetration_as_triangle_pair",
        "//multibody/shapes",
    ],
)

drake_cc_library(
    name = "mesh_query",
    srcs = ["mesh_query.cc"],
    hdrs = ["mesh_query.h"],
    visibility = ["//visibility:public"],
    deps = [
        ":mesh",
        "//common:essential",
        "//geometry/query_results:penetration_as_triangle_pair",
    ],
)

drake_cc_library(
    name = "vtk_io",
    hdrs = ["vtk_io.h"],
    visibility = ["//visibility:public"],
    deps = [
        "//common:essential",
    ],
)

drake_cc_googletest(
    name = "mesh_query_test",
    deps = [
        ":mesh_query",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

add_lint_tests()
