# -*- python -*-

load(
    "@drake//tools/skylark:drake_cc.bzl",
    "drake_cc_googletest",
    "drake_cc_library",
    "drake_cc_package_library",
)
load("//tools/lint:lint.bzl", "add_lint_tests")

package(
    default_visibility = ["//visibility:public"],
)

drake_cc_package_library(
    name = "boussinesq_solver",
    deps = [
        ":compliance_matrix",
        ":integral_general_triangle",
        ":integral_reference_triangle",
        ":jacobian_H_matrix",
        ":math_helper",
        ":objects_contact_model",
        ":test_helper",
    ],
)

filegroup(
    name = "test_objs",
    testonly = 1,
    srcs = [
        "test/Mesh_2/plane.obj",
        "test/Mesh_2/sphere.obj",
        "test/Mesh_3/plane.obj",
        "test/Mesh_3/sphere.obj",
        "test/Mesh_4/plane.obj",
        "test/Mesh_4/sphere.obj",
        "test/ellipsoid.obj",
        "test/plane.obj",
        "test/sphere.obj",
        "test/triangle.obj",
    ],
)

drake_cc_library(
    name = "objects_contact_model",
    srcs = [
        "objects_contact_model.cc",
    ],
    hdrs = [
        "objects_contact_model.h",
    ],
    deps = [
        ":compliance_matrix",
        ":jacobian_H_matrix",
        "//common:essential",
        "//geometry/mesh_query",
        "//multibody/multibody_tree/math",
        "//solvers:moby_lcp_solver",
    ],
)

drake_cc_library(
    name = "jacobian_H_matrix",
    srcs = [
        "jacobian_H_matrix.cc",
    ],
    hdrs = [
        "jacobian_H_matrix.h",
    ],
    deps = [
        "//common:essential",
        "//geometry/mesh_query",
    ],
)

drake_cc_library(
    name = "compliance_matrix",
    srcs = [
        "compliance_matrix.cc",
        "row_compliance_matrix.cc",
    ],
    hdrs = [
        "compliance_matrix.h",
        "row_compliance_matrix.h",
    ],
    deps = [
        ":integral_general_triangle",
        ":integral_reference_triangle",
        "//common:essential",
    ],
)

drake_cc_library(
    name = "integral_general_triangle",
    srcs = [
        "integral_general_triangle.cc",
    ],
    hdrs = [
        "integral_general_triangle.h",
    ],
    deps = [
        ":integral_reference_triangle",
        ":math_helper",
        "//common:essential",
    ],
)

drake_cc_library(
    name = "integral_reference_triangle",
    srcs = [
        "integral_reference_triangle.cc",
    ],
    hdrs = [
        "integral_reference_triangle.h",
    ],
    deps = [
        ":math_helper",
        "//common:essential",
    ],
)

drake_cc_library(
    name = "math_helper",
    srcs = ["math_helper.cc"],
    hdrs = ["math_helper.h"],
    deps = [
        "//common:essential",
    ],
)

drake_cc_library(
    name = "test_helper",
    srcs = [
        "math_helper.cc",
        "test_helper.cc",
    ],
    hdrs = [
        "math_helper.h",
        "test_helper.h",
    ],
    deps = [
        "//common:essential",
    ],
)

drake_cc_googletest(
    name = "example_test",
    srcs = ["test/example_test.cc"],
    data = [
        ":test_objs",
    ],
    deps = [
        ":compliance_matrix",
        ":jacobian_H_matrix",
        ":objects_contact_model",
        ":test_helper",
        "//common:find_resource",
        "//common/test_utilities:eigen_matrix_compare",
        "//geometry/mesh_query",
        "//geometry/mesh_query:vtk_io",
        "//multibody/shapes",
        "//solvers:moby_lcp_solver",
        "@gflags",
    ],
)

drake_cc_googletest(
    name = "jacobian_H_matrix_test",
    srcs = ["test/jacobian_H_matrix_test.cc"],
    data = [
        ":test_objs",
    ],
    deps = [
        ":compliance_matrix",
        ":jacobian_H_matrix",
        ":test_helper",
        "//common:find_resource",
        "//common/test_utilities:eigen_matrix_compare",
        "//geometry/mesh_query",
        "//geometry/mesh_query:vtk_io",
        "//multibody/shapes",
        "//solvers:moby_lcp_solver",
        "@gflags",
    ],
)

drake_cc_googletest(
    name = "compliance_matrix_test",
    deps = [
        ":compliance_matrix",
        ":test_helper",
        "//common/test_utilities:eigen_matrix_compare",
        "//solvers:moby_lcp_solver",
    ],
)

drake_cc_googletest(
    name = "row_compliance_matrix_test",
    deps = [
        ":row_compliance_matrix",
        ":test_helper",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

drake_cc_googletest(
    name = "integral_general_triangle_test",
    deps = [
        ":integral_general_triangle",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

drake_cc_googletest(
    name = "integral_reference_triangle_test",
    deps = [
        ":integral_reference_triangle",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

drake_cc_googletest(
    name = "math_helper_test",
    deps = [
        ":math_helper",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

drake_cc_googletest(
    name = "test_helper_test",
    deps = [
        ":test_helper",
        "//common/test_utilities:eigen_matrix_compare",
    ],
)

add_lint_tests()
